--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -6,6 +6,7 @@
   background-position: center center;
   position: relative;
   .container {
+    width:100%-20%;
     .form {
       margin-top: 3rem;
 
