--- a/scss/_service.scss
+++ b/scss/_service.scss
@@ -1,11 +1,12 @@
 .service-header {
 
     overflow-x: hidden;
-    background: url(../Image/back.jpg) no-repeat;
+    background: url(../Image/bkg1.jpg) no-repeat;
     background-size: cover;
     background-blend-mode: overlay;
     background-position: center center;
     position: relative;
+   
     .container{
 width: 100%-10%;
 
@@ -142,7 +143,7 @@ width: 100%-10%;
   @include responsive($xl){
     .service-header {   
         .container {
-          width: 100%-20%;
+          width: 100%-40%;
           .logo{
             margin-top: 0.5rem;
             width: 8rem;
@@ -220,10 +221,8 @@ width: 100%-10%;
             margin-top: 3rem;
             margin-left: 1rem;
             h1 {
-              font-size: 3rem;
-              .big {
-                font-size: 3.9rem;
-              }
+              font-size: 2.5rem;
+            
             }
           
           }
@@ -246,10 +245,8 @@ width: 100%-10%;
             margin-top: 4rem;
             margin-left: 13rem;
             h1 {
-              font-size: 3.99rem;
-              .big {
-                font-size: 5.33rem;
-              }
+              font-size: 3rem;
+             
             }
             a{
                 margin-left: 50rem;
