--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -1,6 +1,6 @@
 // font
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;1,900&family=Playfair+Display:wght@400;500&display=swap');
  
 // Variables 
 $font: 'Montserrat', sans-serif;
@@ -17,7 +17,7 @@ body{
 }
 // Gird system
 .container {
-  width: 100% - 20%;
+  width: 100% - 40%;
   // max-width: 1200px;
   margin: 0 auto;
 }
@@ -105,7 +105,7 @@ body{
 .btn {
   display: inline-block;
   font-weight: 400;
-  line-height: 1.5;
+  line-height: 1;
   color: #212529;
   text-align: center;
   text-decoration: none;
@@ -115,7 +115,7 @@ body{
   -moz-user-select: none;
   user-select: none;
   background-color: transparent;
-  border: 1px solid transparent;
+  border: 2px solid transparent;
   padding: 0.2rem 2rem;
   font-size: 1rem;
   border-radius: 4rem;
@@ -123,20 +123,20 @@ body{
 }
 @include responsive($md) {
    .btn{
-      width: 13rem;
+      width: 15rem;
       padding: 0.375rem 1.75rem;
    }
 }
 @include responsive($xl) {
    .btn{
-      width: 13rem;
-      padding: 0.6rem 2rem;
+      width: 15rem;
+      padding: 0.4rem 2rem;
    }
 }
    @include responsive($xxl) {
       .btn{
-         width: 20rem;
-         padding: 0.6rem 2rem;
+         width: 15rem;
+         padding: 0.4rem 2rem;
       }
 
 }
